--- a/JustStreamIt.html
+++ b/JustStreamIt.html
@@ -4,6 +4,7 @@
         <title>JustStreamIt</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans">
         <link href="./style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
@@ -51,10 +52,12 @@
                             <button class="best">⟩</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
-                <div class="linebreak">
-                    <div></div>
-                </div>
                 <article>
                     <h2>Catégorie Animation</h2>
                     <div class="diaporama">
@@ -74,10 +77,12 @@
                             <button class="animation">⟩</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
-                <div class="linebreak">
-                    <div></div>
-                </div>
                 <article>
                     <h2>Catégorie Fantasy</h2>
                     <div class="diaporama">
@@ -97,10 +102,12 @@
                             <button class="fantasy">⟩</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
-                <div class="linebreak">
-                    <div></div>
-                </div>
                 <article>
                     <h2>Catégorie Sci-Fi</h2>
                     <div class="diaporama">
@@ -120,11 +127,13 @@
                             <button class="sci-fi">⟩</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
             </section>
-            <div class="linebreak">
-                <div></div>
-            </div>
             <section class="modal" style="display: none;">
                 <!-- Modal content -->
                 <article class="modal-content">
