--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>JustStreamIt</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans">
         <link href="./style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
