--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="./index.html">Acceuil</a>
+                        <a href="./index.html">Accueil</a>
                     </li>
                     <li>
                         <a href="./index.html">Catégorie</a>
