--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="linebreak">
-                        <div class="line">
+                        <div class="line best">
                             <div class="scanner"></div>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                     <h2>Catégorie Animation</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button class="animation" value="0">&lang;</button>
+                            <button class="animation">&lang;</button>
                         </div>
                         <div class="galery animation">
                             <img alt="Meilleur Film d'Animation imdb" tabindex=0 src="">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="linebreak">
-                        <div class="line">
+                        <div class="line animation">
                             <div class="scanner"></div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="linebreak">
-                        <div class="line">
+                        <div class="line fantasy">
                             <div class="scanner"></div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="linebreak">
-                        <div class="line">
+                        <div class="line sci-fi">
                             <div class="scanner"></div>
                         </div>
                     </div>
