Police change, Padding, bold first modal child ok

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <title>JustStreamIt</title>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans">
-        <link href="./style.css" type="text/css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
+        <link href="./style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <header>
@@ -23,33 +26,38 @@
         </header>
         <main>
             <section class="jumbotron">
+                <h2>Meilleur Film au classement IMDB</h2>
                 <article class="best">
-                    <h2 class="best title">Titre du Meilleur Film</h2>
+                    <h3 class="best title">Titre du Meilleur Film</h3>
                     <button>Lecture</button>
                     <p class="best description">Desciption</p>
                 </article>
                 <figure class="best">
-                    <img alt="Affiche du meilleur Film imdb" tabindex=0 src="">
+                    <img alt="Affiche du meilleur Film imdb" tabindex=0 src="./loading.png">
                 </figure>
+                <aside>
+
+                </aside>
             </section>
             <section>
+                <h2>Meilleurs Films par catégorie</h2>
                 <article>
-                    <h2>Films les mieux Notés</h2>
+                    <h3>Films les mieux Notés</h3>
                     <div class="diaporama">
                         <div class="control left">
-                            <button class="best">&lang;</button>
+                            <button class="best" tabindex=-1>&lang;</button>
                         </div>
                         <div class="galery best">
-                            <img alt="Second meilleur Film imdb" tabindex=0 src="">
-                            <img alt="Troisième meilleur Film imdb" tabindex=0 src="">
-                            <img alt="Quatriième meilleur Film imdb" tabindex=0 src="">
-                            <img alt="Cinquième meilleur Film imdb" tabindex=0 src="">
-                            <img alt="Sixième meilleur Film imdb" tabindex=0 src="">
-                            <img alt="Septième meilleur Film imdb" tabindex=0 src="">
-                            <img alt="Huitième meilleur Film imdb" tabindex=0 src="">
+                            <img alt="Second meilleur Film imdb" tabindex=0 src="./loading.png">
+                            <img alt="Troisième meilleur Film imdb" tabindex=0 src="./loading.png">
+                            <img alt="Quatriième meilleur Film imdb" tabindex=0 src="./loading.png">
+                            <img alt="Cinquième meilleur Film imdb" tabindex=0 src="./loading.png">
+                            <img alt="Sixième meilleur Film imdb" tabindex=0 src="./loading.png">
+                            <img alt="Septième meilleur Film imdb" tabindex=0 src="./loading.png">
+                            <img alt="Huitième meilleur Film imdb" tabindex=0 src="./loading.png">
                         </div>
                         <div class="control right">
-                            <button class="best">&rang;</button>
+                            <button class="best" tabindex=-1>&rang;</button>
                         </div>
                     </div>
                     <div class="linebreak">
@@ -59,22 +67,22 @@
                     </div>
                 </article>
                 <article>
-                    <h2>Catégorie Animation</h2>
+                    <h3>Catégorie Animation</h3>
                     <div class="diaporama">
                         <div class="control left">
-                            <button class="animation">&lang;</button>
+                            <button class="animation" tabindex=-1>&lang;</button>
                         </div>
                         <div class="galery animation">
-                            <img alt="Meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Septième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Septième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
                         </div>
                         <div class="control right">
-                            <button class="animation">&rang;</button>
+                            <button class="animation" tabindex=-1>&rang;</button>
                         </div>
                     </div>
                     <div class="linebreak">
@@ -84,22 +92,22 @@
                     </div>
                 </article>
                 <article>
-                    <h2>Catégorie Fantasy</h2>
+                    <h3>Catégorie Fantasy</h3>
                     <div class="diaporama">
                         <div class="control left">
-                            <button class="fantasy">&lang;</button>
+                            <button class="fantasy" tabindex=-1>&lang;</button>
                         </div>
                         <div class="galery fantasy">
-                            <img alt="Meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex=0 src="">
-                            <img alt="Septième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
+                            <img alt="Septième meilleur Film d'Animation imdb" tabindex=0 src="./loading.png">
                         </div>
                         <div class="control right">
-                            <button class="fantasy">&rang;</button>
+                            <button class="fantasy" tabindex=-1>&rang;</button>
                         </div>
                     </div>
                     <div class="linebreak">
@@ -109,22 +117,22 @@
                     </div>
                 </article>
                 <article>
-                    <h2>Catégorie Sci-Fi</h2>
+                    <h3>Catégorie Sci-Fi</h3>
                     <div class="diaporama">
                         <div class="control left">
-                            <button class="sci-fi">&lang;</button>
+                            <button class="sci-fi" tabindex=-1>&lang;</button>
                         </div>
                         <div class="galery sci-fi">
-                            <img alt="Meilleur Film de Science Fiction imdb" tabindex=0 src="">
-                            <img alt="Deuxième meilleur Film de Science Fiction imdb" tabindex=0 src="">
-                            <img alt="Troisième meilleur Film de Science Fiction imdb" tabindex=0 src="">
-                            <img alt="Quatriième meilleur Film de Science Fiction imdb" tabindex=0 src="">
-                            <img alt="Cinquième meilleur Film de Science Fiction imdb" tabindex=0 src="">
-                            <img alt="Sixième meilleur Film de Science Fiction imdb" tabindex=0 src="">
-                            <img alt="Septième meilleur Film de Science Fiction imdb" tabindex=0 src="">
+                            <img alt="Meilleur Film de Science Fiction imdb" tabindex=0 src="./loading.png">
+                            <img alt="Deuxième meilleur Film de Science Fiction imdb" tabindex=0 src="./loading.png">
+                            <img alt="Troisième meilleur Film de Science Fiction imdb" tabindex=0 src="./loading.png">
+                            <img alt="Quatriième meilleur Film de Science Fiction imdb" tabindex=0 src="./loading.png">
+                            <img alt="Cinquième meilleur Film de Science Fiction imdb" tabindex=0 src="./loading.png">
+                            <img alt="Sixième meilleur Film de Science Fiction imdb" tabindex=0 src="./loading.png">
+                            <img alt="Septième meilleur Film de Science Fiction imdb" tabindex=0 src="./loading.png">
                         </div>
                         <div class="control right">
-                            <button class="sci-fi">&rang;</button>
+                            <button class="sci-fi" tabindex=-1>&rang;</button>
                         </div>
                     </div>
                     <div class="linebreak">
@@ -135,7 +143,7 @@
                 </article>
             </section>
             <section class="modal">
-                <!-- Modal content -->
+                <h2>Informations sur le Film</h2>
                 <article class="modal-content">
                     <div>
                         <button class="close">&times;</button>
@@ -143,19 +151,48 @@
                     </div>
                     <div class="modal-data">
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>
+                                <span>Genre:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Date de sortie:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Evaluation:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Score IMDB:</span>
+                                <span class="data"></span>
+                            <li>
+                                <span>Réalisateur:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Acteurs:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Durée:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Pays d'origine:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Résultats Box-office:</span>
+                                <span class="data"></span>
+                            </li>
+                            <li>
+                                <span>Description:</span>
+                                <span class="data"></span>
+                            </li>
                         </ul>
                         <figure>
-                            <img alt="Image du Film" src="">
+                            <img alt="Image du Film" src="./loading.png">
                         </figure>
                     </div>
                 </article>
