--- a/index.html
+++ b/index.html
@@ -25,24 +25,21 @@
             </nav>
         </header>
         <main>
-            <section class="jumbotron">
-                <h2>Meilleur Film au classement IMDB</h2>
+            <div class="jumbotron">
+                <!--Meilleur Film au classement IMDB-->
                 <article class="best">
-                    <h3 class="best title">Titre du Meilleur Film</h3>
+                    <h2 class="best title">Titre du Meilleur Film</h2>
                     <button>Lecture</button>
                     <p class="best description">Desciption</p>
                 </article>
                 <figure class="best">
                     <img alt="Affiche du meilleur Film imdb" tabindex=0 src="./loading.png">
                 </figure>
-                <aside>
-
-                </aside>
-            </section>
-            <section>
-                <h2>Meilleurs Films par catégorie</h2>
+            </div>
+            <div>
+                <!--Meilleurs Films par catégorie-->
                 <article>
-                    <h3>Films les mieux Notés</h3>
+                    <h2>Films les mieux Notés</h2>
                     <div class="diaporama">
                         <div class="control left">
                             <button class="best" tabindex=-1>&lang;</button>
@@ -141,9 +138,9 @@
                         </div>
                     </div>
                 </article>
-            </section>
-            <section class="modal">
-                <h2>Informations sur le Film</h2>
+            </div>
+            <div class="modal">
+                <!--Informations sur le Film-->
                 <article class="modal-content">
                     <div>
                         <button class="close">&times;</button>
@@ -196,7 +193,7 @@
                         </figure>
                     </div>
                 </article>
-            </section>
+            </div>
         </main>
         <footer>
             <script src="./script.js"></script>
